<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_base"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_fragment_gradient"

    tools:context="com.example.mkemaltas.yapiyoz.BaseActivity">


    <LinearLayout
        android:id="@+id/forgot_password_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:padding="20dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/forgot_password_question"
            android:textSize="20dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:text="@string/enter_your_e_mail_addres_to_reset_your_password"
            android:textSize="15dp" />


        <EditText
            android:id="@+id/forgot_password_fragment_email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress" />


        <Button
            android:id="@+id/forgot_password_fragment_reset_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_login_button_dark"
            android:text="@string/reset_password" />

        <TextView
            android:id="@+id/forgot_password_fragment_back_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/back"
            android:textSize="20dp" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/forgot_password_fragment_progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center|bottom"
        android:visibility="gone" />

</RelativeLayout>
